# ImgPersTool

./: CMakeLists.txt  README.md  cmake_install.cmake  distorted.jpgZone.Identifier  nusha1.jpgZone.Identifier
.cmake/api/v1/reply/: cache-v2-0055a5fba2504e41f7d5.json  cmakeFiles-v1-58480b133fa934ec611d.json  codemodel-v2-3aa613f82f9d8ed01787.json  index-2025-08-12T10-09-27-0141.json  target-internship-Debug-15a479c762342e59a5f1.json  target-internship_autogen-Debug-0b80612f0fa600e8d7f7.json  target-internship_autogen_timestamp_deps-Debug-efe6758cb2db0ee8252e.json
include/: MainWindow.h  corner_detector.hpp  homography.hpp  util.hpp
internship_autogen/: deps
src/: MainWindow.cpp  corner_detector.cpp  homography.cpp
